# semicon-interview-trainer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: questions.json
src/semicon_interview_trainer/: __init__.py  cli.py  quiz.py
tests/: test_quiz.py
